--- a/styles/firacode.less
+++ b/styles/firacode.less
@@ -1,27 +1,21 @@
 @import 'functions';
 
-.font-face('firacode-light', 'firacode/light.otf');
-.font-face('firacode-regular', 'firacode/regular.otf');
-.font-face('firacode-retina', 'firacode/retina.otf');
-.font-face('firacode-medium', 'firacode/medium.otf');
-.font-face('firacode-bold', 'firacode/bold.otf');
-
 [data-font='firacode-light'] {
-  .editor-font('firacode-light');
+  .editor-font('Fira Code Light');
 }
 
 [data-font='firacode-regular'] {
-  .editor-font('firacode-regular');
+  .editor-font('Fira Code Regular');
 }
 
 [data-font='firacode-retina'] {
-  .editor-font('firacode-retina');
+  .editor-font('Fira Code Retina');
 }
 
 [data-font='firacode-medium'] {
-  .editor-font('firacode-medium');
+  .editor-font('Fira Code Medium');
 }
 
 [data-font='firacode-bold'] {
-  .editor-font('firacode-bold');
+  .editor-font('Fira Code Bold');
 }
