Get it working properly on Mac OSX

--- a/styles/firacode.less
+++ b/styles/firacode.less
@@ -1,21 +1,21 @@
 @import 'functions';
 
 [data-font='firacode-light'] {
-  .editor-font('Fira Code Light');
+  .editor-font('Fira Code', 'lighter');
 }
 
 [data-font='firacode-regular'] {
-  .editor-font('Fira Code Regular');
+  .editor-font('Fira Code', 'regular');
 }
 
 [data-font='firacode-retina'] {
-  .editor-font('Fira Code Retina');
+  .editor-font('Fira Code', 'normal');
 }
 
 [data-font='firacode-medium'] {
-  .editor-font('Fira Code Medium');
+  .editor-font('Fira Code', 'bolder');
 }
 
 [data-font='firacode-bold'] {
-  .editor-font('Fira Code Bold');
+  .editor-font('Fira Code', 'bold');
 }
