Fix font weight setting.

--- a/styles/firacode.less
+++ b/styles/firacode.less
@@ -1,21 +1,21 @@
 @import 'functions';
 
 [data-font='firacode-light'] {
-  .editor-font('Fira Code', 'lighter');
+  .editor-font('Fira Code', 300);
 }
 
 [data-font='firacode-regular'] {
-  .editor-font('Fira Code', 'regular');
+  .editor-font('Fira Code', 400);
 }
 
 [data-font='firacode-retina'] {
-  .editor-font('Fira Code', 'normal');
+  .editor-font('Fira Code', 400);
 }
 
 [data-font='firacode-medium'] {
-  .editor-font('Fira Code', 'bolder');
+  .editor-font('Fira Code', 500);
 }
 
 [data-font='firacode-bold'] {
-  .editor-font('Fira Code', 'bold');
+  .editor-font('Fira Code', 600);
 }
